--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="actions">actions</section>
         <section class="channel">channel</section>
         <section class="subscribe">subcribe</section>
-        <section class="ad"></section>
+        <section class="ad">ad</section>
         <section class="up-next">up-next</section>
     </main>
 </body>
