--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Roboto:400, 700&display=swad">
+    <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/1422277c/img/favicon.ico" type="image/x-icon">
+   </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="images/youtube.png">
+        </div>
+
+        <div class="search">
+            <input type="search" placeholder="Pesquisar">
+        </div>
+
+        <div class="sign-in">
+            <a href="#" class="button">Fazer login</a>
+        </div>
+    </header>
+
     <main>
         <section class="video-player">video-player</section>
         <section class="video-info">video-info</section>
