--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="pan_tool">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Roboto:400, 700&display=swad">
-    <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/1422277c/img/favicon.ico" type="image/x-icon">
-   </head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css/family=Roboto:400, 700&display=swad"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://www.youtube.com/s/desktop/1422277c/img/favicon.ico"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="images/youtube.png">
-        </div>
+      <div class="logo">
+        <img src="images/youtube.png" />
+      </div>
 
-        <div class="search">
-            <input type="search" placeholder="Pesquisar">
-        </div>
+      <div class="search">
+        <input type="search" placeholder="Pesquisar" />
+      </div>
 
-        <div class="sign-in">
-            <a href="#" class="button">Fazer login</a>
-        </div>
+      <div class="sign-in">
+        <a href="#" class="button">Fazer login</a>
+      </div>
     </header>
 
     <main>
-        <section class="video-player">video-player</section>
-        <section class="video-info">video-info</section>
-        <section class="actions">actions</section>
-        <section class="channel">channel</section>
-        <section class="subscribe">subcribe</section>
-        <section class="ad">ad</section>
-        <section class="up-next">up-next</section>
+      <section class="video-player">
+        <iframe
+          src="https://www.youtube.com/embed/2qgr10MA-3Y"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <section class="video-info">video-info</section>
+      <section class="actions">actions</section>
+      <section class="channel">channel</section>
+      <section class="subscribe">subcribe</section>
+      <section class="ad">ad</section>
+      <section class="up-next">up-next</section>
     </main>
-</body>
+  </body>
 </html>
