--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
     <main>
       <section class="video-player">
         <iframe
-          src="https://www.youtube.com/embed/2qgr10MA-3Y"
-          title="YouTube video player"
+          src="https://www.youtube.com/embed/JqFIqEK3G1c"
           frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
       </section>
 
-      <section class="video-info">video-info</section>
+      <section class="video-info">
+        <h1>ESTUDE APENAS O SUFICIENTE</h1>
+        <p class="views">500 visualizações</p>
+      </section>
+
       <section class="actions">actions</section>
       <section class="channel">channel</section>
       <section class="subscribe">subcribe</section>
