--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="pan_tool">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css/family=Roboto:400, 700&display=swad"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://www.youtube.com/s/desktop/1422277c/img/favicon.ico"
-      type="image/x-icon"
-    />
+    <link href="https://fonts.googleapis.com/css/family=Roboto:400, 700&display=swad" 
+        rel="stylesheet"/>
+    <link rel="shortcut icon"href="favicon.ico"type="image/x-icon"/>
   </head>
   <body>
     <header>
@@ -33,12 +27,7 @@
 
     <main>
       <section class="video-player">
-        <iframe
-          src="https://www.youtube.com/embed/JqFIqEK3G1c"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c"frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
       </section>
 
       <section class="video-info">
@@ -46,7 +35,38 @@
         <p class="views">500 visualizações</p>
       </section>
 
-      <section class="actions">actions</section>
+      <section class="actions">
+        <div class="action">
+          <svg><g><path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.
+            06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5
+             1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path></g></svg>
+          <span>90</span>
+        </div>
+  
+        <div class="action">
+          <svg><g><path d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02
+             7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95
+              4.57-.03.32c0 .41.17.79.44 1.06L9.83
+               23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"></path></g></svg>
+          <span>0</span>
+        </div>
+  
+        <div class="action">
+          <svg><g><path d="M14 9V5l7 7-7 7v-4.1c-5 0-8.5 1.6-11 5.1 1-5 4-10 11-11z"></path></g></svg>
+          <span>COMPARTILHAR</span>
+        </div>
+  
+        <div class="action">
+          <svg><g><path d="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z"></path></g></svg>
+          <span>SALVAR</span>
+        </div>
+  
+        <div class="action">
+          <svg><g><circle cx="5" cy="12" r="2" class="style-scope yt-icon"></circle><circle cx="12" cy="12" r="2" class="style-scope yt-icon"></circle><circle cx="19" cy="12" r="2" class="style-scope yt-icon"></circle></g></svg>
+        </div>
+  
+      </section>
+      
       <section class="channel">channel</section>
       <section class="subscribe">subcribe</section>
       <section class="ad">ad</section>
