--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
     <main>
       <section class="video-player">
-        <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c"frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c"
+        frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen>
+      </iframe>
       </section>
 
       <section class="video-info">
@@ -64,10 +66,18 @@
         <div class="action">
           <svg><g><circle cx="5" cy="12" r="2" class="style-scope yt-icon"></circle><circle cx="12" cy="12" r="2" class="style-scope yt-icon"></circle><circle cx="19" cy="12" r="2" class="style-scope yt-icon"></circle></g></svg>
         </div>
-  
-      </section>
+        </section>
       
-      <section class="channel">channel</section>
+      <section class="channel">
+        <img src="images/channel-icon.jpg">
+
+        <div class="channel-info">
+          <h4 class="channel-name">Lucas Caton</h4>
+          <p class="date">Publicação em 2019</p>
+          <p class="channel-description">Apaixonado por programação, mora em Brisbane, Austrália e é empreendedor por paixão.</p>
+        </div>
+      </section>
+  
       <section class="subscribe">subcribe</section>
       <section class="ad">ad</section>
       <section class="up-next">up-next</section>
