--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
         </div>
       </section>
   
-      <section class="subscribe">subcribe</section>
+      <section class="subscribe">
+        <a href="#" class="button">Inscreva-se</a> 
+      </section>
+      
       <section class="ad">ad</section>
       <section class="up-next">up-next</section>
     </main>
