--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
       <section class="subscribe">
         <a href="#" class="button">Inscreva-se</a> 
       </section>
-      
-      <section class="ad">ad</section>
+
+      <section class="ad">#programeSeuFuturo</section>
+
       <section class="up-next">up-next</section>
     </main>
   </body>
