--- a/index.html
+++ b/index.html
@@ -84,7 +84,48 @@
 
       <section class="ad">#programeSeuFuturo</section>
 
-      <section class="up-next">up-next</section>
+      <section class="up-next">
+        <a href="https://www.youtube.com/watch?v=U4M-GThJb8I">
+          <img src="https://img.youtube.com/vi/U4M-GThJb8I/mqdefault.jpg">
+          <div class="video-details">
+            <h4>COMO ATUALIZAR UM PROJETO PARA RAILS 6</h4>
+            <p>Lucas Caton</p>
+          </div>
+        </a>
+  
+        <a href="https://www.youtube.com/watch?v=thcXWRKWGuw">
+          <img src="https://img.youtube.com/vi/thcXWRKWGuw/mqdefault.jpg">
+          <div class="video-details">
+            <h4>VOCÊ ESTÁ PRONTO PARA O MERCADO DE PROGRAMAÇÃO?</h4>
+            <p>Lucas Caton</p>
+          </div>
+        </a>
+  
+        <a href="https://www.youtube.com/watch?v=_FjRDFbbKqE">
+          <img src="https://img.youtube.com/vi/_FjRDFbbKqE/mqdefault.jpg">
+          <div class="video-details">
+            <h4>DOCKER & CONTAINERS</h4>
+            <p>Lucas Caton</p>
+          </div>
+        </a>
+  
+        <a href="https://www.youtube.com/watch?v=Q80PoxkiHuo">
+          <img src="https://img.youtube.com/vi/Q80PoxkiHuo/mqdefault.jpg">
+          <div class="video-details">
+            <h4>COMO LER UM LIVRO RENDEU UMA VAGA NA REDHAT</h4>
+            <p>Lucas Caton</p>
+          </div>
+        </a>
+  
+        <a href="https://www.youtube.com/watch?v=xZcwB_cVtrI">
+          <img src="https://img.youtube.com/vi/xZcwB_cVtrI/mqdefault.jpg">
+          <div class="video-details">
+            <h4>CONSISTÊNCIA ANTES DE EXCELÊNCIA</h4>
+            <p>Lucas Caton</p>
+          </div>
+        </a>
+      </section>
+      
     </main>
   </body>
 </html>
