--- a/index.html
+++ b/index.html
@@ -27,21 +27,17 @@
 
     <main>
       <section class="video-player">
-        <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c"
-        frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen>
-      </iframe>
+        <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
-
+  
       <section class="video-info">
         <h1>ESTUDE APENAS O SUFICIENTE</h1>
         <p class="views">500 visualizações</p>
       </section>
-
+    
       <section class="actions">
         <div class="action">
-          <svg><g><path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.
-            06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5
-             1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path></g></svg>
+          <svg><g><path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path></g></svg>
           <span>90</span>
         </div>
   
@@ -79,7 +75,7 @@
       </section>
   
       <section class="subscribe">
-        <a href="#" class="button">Inscreva-se</a> 
+        <a href="#" class="button">Inscrever-se</a> 
       </section>
 
       <section class="ad">#programeSeuFuturo</section>
@@ -125,7 +121,7 @@
           </div>
         </a>
       </section>
-      
+
     </main>
   </body>
 </html>
